--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "v1",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.10.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
