--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "js-cookie": "^3.0.1",
     "mongoose": "^6.10.0",
     "next": "13.2.1",
+    "next-auth": "^4.19.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.2"
+    "react-hook-form": "^7.43.2",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
