--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.12",
     "@heroicons/react": "v1",
     "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
