--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "v1",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
