--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI= mongodb+srv://jaysonchua:elayne0427@cluster1.xhogant.mongodb.net/ejstudio?retryWrites=true&w=majority
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=somethingsecret
