--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI= mongodb+srv://jaysonchua:elayne0427@cluster1.xhogant.mongodb.net/ejstudio?retryWrites=true&w=majority
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somethingsecret
+PAYPAL_CLIENT_ID=ARQnqFAQTTbtZrFJSlD_18Q9BXG2_PCTRLbxomjHuwx28M_KhaZBmdZNQIDJzboy6LvCCydRK3Nq8TGn
