--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "v1",
+    "@paypal/react-paypal-js": "^7.8.2",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "eslint": "8.34.0",
