--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paypal/react-paypal-js": "^7.8.2",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.2.1",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "js-cookie": "^3.0.1",
@@ -21,6 +22,7 @@
     "next": "13.2.1",
     "next-auth": "^4.19.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.2",
     "react-toastify": "^9.1.1"
