--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ MONGODB_URI= mongodb+srv://jaysonchua:elayne0427@cluster1.xhogant.mongodb.net/ej
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=somethingsecret
 PAYPAL_CLIENT_ID=ARQnqFAQTTbtZrFJSlD_18Q9BXG2_PCTRLbxomjHuwx28M_KhaZBmdZNQIDJzboy6LvCCydRK3Nq8TGn
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME = dkfpmot1j
+NEXT_PUBLIC_CLOUDINARY_API_KEY=188555263834295
+CLOUDINARY_SECRET=odxYq-F91sw0o21MbKDv--A76k8
+CLOUDINARY_URL=cloudinary://188555263834295:odxYq-F91sw0o21MbKDv--A76k8@dkfpmot1j
