--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.2.1",
+    "cloudinary": "^1.36.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "js-cookie": "^3.0.1",
